@@ -48,7 +48,7 @@ public class WebSokcetService {
         String filePath = "C:\\chat\\chat" + uuid;
         // 메시지 내용
         List<String> lines;
-        
+
         try {
             lines = Files.readAllLines(Paths.get(filePath), Charset.defaultCharset());
         } catch (IOException e) {
@@ -69,7 +69,7 @@ public class WebSokcetService {
                 stream.write((message.getSendDate() + "\n").getBytes(StandardCharsets.UTF_8));
             }
             stream.write(messageContent.getBytes(StandardCharsets.UTF_8));
-            message.setMessage(messageContent.replace("\\lineChange", "\n"));
+            message.setChatUUID(messageUUid);
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -88,22 +88,27 @@ public class WebSokcetService {
                     .map(stringTransformer)
                     .collect(Collectors.toList());
 
-            if (previousLines.isEmpty()) { // 내 엔드포인트가 최하단에 있을 경우엔 그냥 채팅 내용 불러오기
-                previousLines = lines.stream()
-                        .filter(createFilterCondition(message.getParam()))
-                        .limit(20)
-                        .map(stringTransformer)
-                        .collect(Collectors.toList());
+            int startIndex = lines.indexOf(previousLines.size());
+
+            if (startIndex == -1) {
+                startIndex = 0;
             }
 
-            List<String> fileSize = lines.stream().filter(createFilterCondition(message.getParam())).toList();
-            message.setFileSize(fileSize.size());
+            System.out.println("startIndex : " + startIndex);
+            System.out.println("previousLines.size : " + previousLines.size());
+            // 내 엔드포인트가 최하단에 있을 경우엔 그냥 채팅 내용 불러오기 + 엔드포인트부터 위에 20개 불러오기
+            List<String> previousLines2 = lines.stream()
+                    .filter(createFilterCondition(message.getParam()))
+                    .skip(startIndex)
+                    .limit(20)
+                    .map(stringTransformer)
+                    .collect(Collectors.toList());
+            previousLines.addAll(previousLines2);
 
-            Collections.reverse(previousLines);
-            System.out.println("previousLines : " + previousLines);
-            return previousLines;
+            Collections.reverse(previousLines2);
+
+            return previousLines2;
         } catch (IOException e) {
-            System.out.println("파일 읽기 실패");
             return null;
         }
     }
@@ -121,20 +126,15 @@ public class WebSokcetService {
             //라인 갯수만큼 스킵하거나, 전달받은 마지막 라인부터 시작
             //int startIndex = message.isUpDown() ? message.getNowLine() : lines.indexOf(message.getLastLine()) + 1;
 
-            System.out.println("message.getNowLine() : " + message.getNowLine());
             List<String> previousLines = lines.stream()
                     .filter(createFilterCondition(message.getParam()))
                     .skip(message.getNowLine())
                     .map(stringTransformer)
                     .limit(batchSize)
                     .collect(Collectors.toList());
-
-            System.out.println(previousLines);
-
             //message.setNowLine(startIndex + previousLines.size());
             return previousLines;
         } catch (IOException e) {
-            System.out.println("파일 읽기 실패");
             return null;
         }
     }
@@ -147,9 +147,6 @@ public class WebSokcetService {
             List<String> lines = Files.readAllLines(Paths.get(filePath), Charset.defaultCharset());
             Collections.reverse(lines); // 파일 내용을 역순으로 정렬
 
-            String contains1 = (message.getUserEmail() + "EndPoint");
-            System.out.println(contains1);
-
             List<String> previousLines = lines.stream()
                     .takeWhile(line -> !line.contains(message.getUserEmail() + "EndPoint" + " [" + message.getParam() + "]"))
                     .map(stringTransformer)
@@ -157,17 +154,11 @@ public class WebSokcetService {
 
             Collections.reverse(previousLines);
 
-            System.out.println("previousLinesInCount : " + previousLines);
-
             if (previousLines.isEmpty()) {
-                System.out.println(0);
                 return 0;
             }
-            System.out.println(previousLines.size());
             return previousLines.size();
         } catch (IOException e) {
-            System.out.println(0);
-            System.out.println("엔드포인트 파일 읽기 실패");
             return 0;
         }
     }
